hopefully fixed contrast issue

--- a/src/MenuBar/MenuBar.css
+++ b/src/MenuBar/MenuBar.css
@@ -83,7 +83,7 @@
 }
 
 #emergency-button a {
-  color: #28a745;
+  color: #138017;
 }
 
 .navigation ul li {
